fixed overflow bug

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
     font-family: 'Catamaran', sans-serif;
     font-size: 1.1rem;
     line-height: 1.6;
+    overflow-x: hidden;
 }
 
 h1, h2, h3, h4 {
@@ -251,6 +252,11 @@ a {
 
 /* Media Queries */
 @media(max-width: 700px){
+
+    body {
+        overflow-x: hidden;
+    }
+
     .section-a .container {
         grid-template-columns: 1fr;
         text-align: center;
